@@ -1497,44 +1497,44 @@ static char * mini_ok_xpm[] = {
 /* XPM */
 static char * imgload_on_xpm[] = {
 "15 15 2 1",
-"       c #00000000CF3C",
-".      c #FFFFFFFFFFFF",
-" . .  .........",
-" .     ...   ..",
-" .   . ... ....",
-" . ... .. .....",
-" .....  . ..  .",
-".........  .. .",
-"..........    .",
-"...............",
-".   ...........",
-". .  .  .. ....",
-". .. .     ....",
-". .. . .  .....",
-".    . .  .....",
-"...............",
-"..............."};
+" 	c #FFFFFFFFFFFF",
+".	c #00000000CF3C",
+"               ",
+" ... .   .  .. ",
+"  .  .. .. . . ",
+"  .  . . . .   ",
+"  .  .   . . . ",
+"  .  .   . . . ",
+" ... .   .  .. ",
+"               ",
+"   ..   .   .  ",
+"  .  .  ..  .  ",
+"  .  .  . . .  ",
+"  .  .  .  ..  ",
+"  .  .  .   .  ",
+"   ..   .   .  ",
+"               "};
 
 /* XPM */
 static char * imgload_off_xpm[] = {
 "15 15 2 1",
-"       c #CF3C00000000",
-".      c #FFFFFFFFFFFF",
-" .. . .........",
-" .    ..    ...",
-" .     . ......",
-" . . . . ..  ..",
-" . ...    .. ..",
-" ........    ..",
-"...............",
-"...............",
-"...............",
-"    ..  .  ....",
-" .     ..    ..",
-" . . .... .....",
-"   .    .   ...",
-"  ..  ...   ...",
-".... .... ....."};
+" 	c #FFFFFFFFFFFF",
+".	c #CF3C00000000",
+"               ",
+" ... .   .  .. ",
+"  .  .. .. . . ",
+"  .  . . . .   ",
+"  .  .   . . . ",
+"  .  .   . . . ",
+" ... .   .  .. ",
+"               ",
+"  ..   ... ... ",
+" .  .  .   .   ",
+" .  .  ... ... ",
+" .  .  .   .   ",
+" .  .  .   .   ",
+"  ..   .   .   ",
+"               "};
 
 /* XPM */
 static char *left_i_xpm[] = {
